--- a/references.bib
+++ b/references.bib
@@ -640,4 +640,21 @@
   note   = {\href{https://arxiv.org/abs/2109.00762}{arXiv:2109.00762}},
 }
 
+@Article{SaitoShinoda2000,
+  author     = {Saito, Naomichi and Shinoda, Ken-ichi},
+  journal    = {Tokyo J. Math.},
+  title      = {Character sums attached to finite reductive groups},
+  year       = {2000},
+  issn       = {0387-3870},
+  number     = {2},
+  pages      = {373--385},
+  volume     = {23},
+  doi        = {10.3836/tjm/1255958677},
+  fjournal   = {Tokyo Journal of Mathematics},
+  mrclass    = {11L05 (11T23 11T24 20G40)},
+  mrnumber   = {1806471},
+  mrreviewer = {Shashikant\ A.\ Katre},
+  url        = {https://doi.org/10.3836/tjm/1255958677},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
